# Hash-Generator

./: .gitmodules  CMakeLists.txt  README.md  example.md
data/: rand_1000_1.txt  rand_1000_2.txt  sim_1500_1.txt  sim_1500_2.txt
include/: analysis.h  hash.h  helpers.h  main.h
src/: analysis.cpp  hash.cpp  helpers.cpp  main.cpp
